Code finalized for submission

--- a/training.ipynb
+++ b/training.ipynb
@@ -14,9 +14,9 @@
     "\n",
     "from model_trainer import ModelTrainer\n",
     "from lstm.dataset import TextDataset\n",
-    "from lstm.lstm_token_classifier import LSTMTokenClassifier\n",
+    "from lstm.token_classifier import LSTMTokenClassifier\n",
     "from lstm.utils import create_glove_matrix\n",
-    "from bert.bert_dataset import BertTextDataset\n",
+    "from bert.dataset import BertTextDataset\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,43 +32,34 @@
     "weights_dir = './weights'\n",
     "device = 'cuda'\n",
     "max_line_len = 150\n",
-    "# batch_size = 128  # BERT\n",
-    "batch_size = 8192"
+    "full_finetuning = True\n",
+    "\n",
+    "batch_size = 128  # BERT\n",
+    "# batch_size = 8192  # LSTM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[DATASET] Maximum line length: 150\n",
-      "[DATASET] Vocabulary size: 101945\n",
-      "[DATASET] Maximum line length: 150\n",
-      "[DATASET] Vocabulary size: 101945\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_dataset = TextDataset(base_path=data_dir,\n",
-    "                            split_name='train',\n",
-    "                            max_len=max_line_len)\n",
+    "# train_dataset = TextDataset(root_dir=data_dir,\n",
+    "#                             split_name='train',\n",
+    "#                             max_line_len=max_line_len)\n",
     "\n",
-    "val_dataset = TextDataset(base_path=data_dir,\n",
-    "                          split_name='dev',\n",
-    "                          max_len=max_line_len,\n",
-    "                          vocab=train_dataset.get_vocab())\n",
+    "# val_dataset = TextDataset(root_dir=data_dir,\n",
+    "#                           split_name='dev',\n",
+    "#                           max_line_len=max_line_len,\n",
+    "#                           vocab=train_dataset.get_vocab())\n",
     "\n",
-    "# train_dataset = BERTTextDataset(base_path=data_dir,\n",
-    "#                                 split_name='train',\n",
-    "#                                 max_len=max_line_len)\n",
+    "train_dataset = BertTextDataset(root_dir=data_dir,\n",
+    "                                split_name='train',\n",
+    "                                max_line_len=max_line_len)\n",
     "\n",
-    "# val_dataset = BERTTextDataset(base_path=data_dir,\n",
-    "#                               split_name='dev',\n",
-    "#                               max_len=max_line_len)"
+    "val_dataset = BertTextDataset(root_dir=data_dir,\n",
+    "                              split_name='dev',\n",
+    "                              max_line_len=max_line_len)"
    ]
   },
   {
@@ -125,7 +116,7 @@
    ],
    "source": [
     "word2id = train_dataset.word2id\n",
-    "pretrained_embeddings = create_glove_matrix('./data/glove.6B.100d.txt',\n",
+    "pretrained_embeddings = create_glove_matrix('./assets/glove.6B.100d.txt',\n",
     "                                            word2id,\n",
     "                                            embed_dim=100)\n",
     "\n",
@@ -180,7 +171,6 @@
    "source": [
     "model = BertForTokenClassification.from_pretrained(\n",
     "    \"bert-base-uncased\",\n",
-    "    # 2 labels -> logits: (32, 200, 2)\n",
     "    num_labels=2,\n",
     "    output_attentions=False,\n",
     "    output_hidden_states=False\n",
@@ -199,13 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "FULL_FINETUNING = True\n",
-    "\n",
-    "if FULL_FINETUNING:\n",
+    "if full_finetuning:\n",
     "    param_optimizer = list(model.named_parameters())\n",
     "    no_decay = ['bias', 'gamma', 'beta']\n",
     "    optimizer_grouped_parameters = [\n",
@@ -234,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +235,7 @@
     "    eps=1e-8\n",
     ")\n",
     "\n",
-    "trainer = ModelTrainer(model, criterion, optimizer, device, model_prefix='lstm_subst_detector')"
+    "trainer = ModelTrainer(model, criterion, optimizer, device, model_prefix='bert_subst_detector')"
    ]
   },
   {
@@ -5907,6 +5895,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.save_pretrained(os.path.join(weights_dir, './assets/bert_subst_detector_0004_0.0491'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plt.figure(figsize=(7,5))\n",
     "plt.plot(train_loss, label='Train loss')\n",
     "plt.plot(val_loss, label='Val loss')\n",
@@ -5935,7 +5932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
